--- a/01canvas基础知识/base.html
+++ b/01canvas基础知识/base.html
@@ -3,7 +3,7 @@
  * @Description: 
  * @Date: 2020-12-14 10:59:09
  * @LastEditors: XiaoWen
- * @LastEditTime: 2020-12-14 15:21:32
+ * @LastEditTime: 2020-12-15 16:02:04
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -28,6 +28,12 @@
 <!-- <script src="./01绘制三角形.js"></script>-->
 <!-- <script src="./02绘制圆或圆弧.js"></script> -->
 <!-- <script src="./03贝塞尔曲线.js"></script> -->
-<script src="./flow.js"></script>
+<!-- <script src="./04矩形.js"></script> -->
+<!-- <script src="./05渐变.js"></script> -->
+<!-- <script src="./06纹理填充.js"></script> -->
+<!-- <script src="./07线条设置.js"></script> -->
+<script src="./08阴影.js"></script>
+
+<!-- <script src="./flow.js"></script> -->
 
 </html>
