--- a/01canvas基础知识/base.html
+++ b/01canvas基础知识/base.html
@@ -3,7 +3,7 @@
  * @Description: 
  * @Date: 2020-12-14 10:59:09
  * @LastEditors: XiaoWen
- * @LastEditTime: 2020-12-15 16:02:04
+ * @LastEditTime: 2020-12-17 13:58:08
 -->
 <!DOCTYPE html>
 <html lang="en">
@@ -32,7 +32,9 @@
 <!-- <script src="./05渐变.js"></script> -->
 <!-- <script src="./06纹理填充.js"></script> -->
 <!-- <script src="./07线条设置.js"></script> -->
-<script src="./08阴影.js"></script>
+<!-- <script src="./08阴影.js"></script> -->
+<!-- <script src="./09剪切.js"></script> -->
+<script src="./10判断点是否在路径中.js"></script>
 
 <!-- <script src="./flow.js"></script> -->
 
